--- a/style.css
+++ b/style.css
@@ -150,3 +150,94 @@ nav button{
     font-weight: 400;
     line-height: 1.5rem;
 }
+
+/* three */
+.three{
+    background-color: #1A0B2E;
+    padding: 7.5rem 12.5rem;
+    color: #FFFFFF;
+    text-align: center;
+}
+.three h2{
+    color: #FFFFFF;
+    font-size: 4rem;
+    font-weight: bold;
+}
+.v-cards{
+    display: flex;
+    gap: 1.875rem;
+    justify-content: space-between;
+
+}
+.v-card{
+    background-color: #250D44;
+    width: 23.75rem;
+    height: 27.5rem;
+    border-radius: 2rem;
+    overflow: hidden;
+    text-align: left;
+    display: grid;
+    justify-content: space-between;  
+}
+.v-card iframe{
+  width: 100%;              
+  height: 13.375rem;
+}
+.context{
+    padding: 1.5rem;
+}
+.context h5{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.context p{
+    font-size: 1rem;
+    color: #FFFFFF;
+    opacity: .6;
+    line-height: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: .25rem;
+}
+
+.host{
+    padding: 7.5rem;
+    display: grid;
+    gap: 2.5rem;
+}
+.host-section{
+    background-color: rgba(53, 17, 101, 40);
+    border-radius: 2.5rem;
+    display: flex;
+    padding: 2.5rem;
+    text-align: left;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.about-host{
+    display: grid;
+    gap: 1rem;
+    
+}
+.about-host h3{
+    font-size: 2rem;
+    font-weight: bold;
+}
+.about-host p{
+    color: #FFFFFF;
+    opacity: .6;
+}
+
+.social{
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+}
+.social img{
+    width: 2.5;
+    height: 2.5;
+    border-radius: 50%;
+    border: 1px solid #533C72;
+    padding: .625rem;
+}
