--- a/style.css
+++ b/style.css
@@ -158,6 +158,10 @@ nav button{
     color: #FFFFFF;
     text-align: center;
 }
+.three-container{
+    display: grid;
+    gap: 2.5rem;
+}
 .three h2{
     color: #FFFFFF;
     font-size: 4rem;
