--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ nav button{
 }
 
 .host{
-    padding: 7.5rem;
+    padding: 7.5rem 0;
     display: grid;
     gap: 2.5rem;
 }
@@ -397,6 +397,139 @@ nav button{
     font-weight: 400;
     line-height: 1.5rem;
 }
+/* three */
+.three{
+    background-color: #1A0B2E;
+    padding: 2.5rem 1.25rem;
+    color: #FFFFFF;
+    text-align: center;
+}
+.three-container{
+    display: grid;
+    gap: 2.5rem;
+}
+.three h2{
+    color: #FFFFFF;
+    font-size: 2rem;
+    font-weight: bold;
+}
+.v-cards{
+    display: grid;
+    gap: 1rem;
+    justify-content: space-between;
 
+}
+.v-card{
+    background-color: #250D44;
+    width: 23.75rem;
+    height: 27.5rem;
+    border-radius: 2rem;
+    overflow: hidden;
+    text-align: left;
+    display: grid;
+    justify-content: space-between;  
+}
+.v-card iframe{
+  width: 100%;              
+  height: 13.375rem;
+}
+.context{
+    padding: 1.5rem;
+}
+.context h5{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.context p{
+    font-size: 1rem;
+    color: #FFFFFF;
+    opacity: .6;
+    line-height: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: .25rem;
+}
+
+.host{
+    display: grid;
+    gap: 2.5rem;
+}
+.host-section{
+    background-color: rgba(53, 17, 101, 40);
+    border-radius: 2.5rem;
+    display: grid;
+    padding: 2.5rem 1.25rem;
+    text-align: center;
+    align-items: center;
+    justify-items: center;
+    gap: 1.5rem;
+}
+
+.about-host{
+    display: grid;
+    gap: 1rem;
+    justify-items: center;;
+    
+}
+.about-host h3{
+    font-size: 2rem;
+    font-weight: bold;
+}
+.about-host p{
+    color: #FFFFFF;
+    opacity: .6;
+
+}
+
+.social{
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+}
+.social img{
+    width: 100%
+}
+.social-circle{
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    border: 1px solid #533C72;
+    padding: .625rem;
+}
+.footer{
+    background-image: url(./assets/footer-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: #FFFFFF;
+    padding: 2.5rem 1.25rem;
+}
+
+.social-footer{
+    display: grid;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+.social-footer-card{
+    display: flex;
+    gap: .5rem;
+}
+.social-footer-card p{
+    font-size: 1rem;
+    font-weight: 500;
+    opacity: .6;
+}
+.footer{
+    display: grid;
+    gap: 2rem;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+
+}
+.footer p{
+    font-size: 1rem;
+    opacity: .6;
+}
 
 }
