--- a/style.css
+++ b/style.css
@@ -11,9 +11,13 @@ nav{
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid rgba(65, 37, 103, 1);
+     position:relative;
 }
-.mobile-nav{
-    display: none;
+.hamburger-btn{
+  display:none;
+   border:0;
+  cursor:pointer;
+  padding:6px;
 }
 /* menu */
 .menu-bar{
@@ -34,6 +38,84 @@ nav button{
     gap: .25rem;
     background: linear-gradient(to top right, #F7E93F, #FB09B4, #9100F8);
     color: #FFFFFF;
+    padding: 1rem 0.75rem;
+    border-radius: 10000px;
+    font-weight: 600;
+}
+
+/* hero */
+.hero{
+    background-image: url(./assets/hero-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 6.125rem 32.8125rem;
+    display: grid;
+    justify-items: center;
+    align-content: center;
+    text-align: center;
+}
+.hero-block{
+    display: grid;
+    justify-items: center;
+    gap: 1rem;
+}
+.hero-visual{
+    position: relative;
+    margin: 0 auto;
+    width: 21.875rem;
+    
+}
+.back{
+    position: relative;
+    z-index: 1;
+}
+.front{
+    position: absolute;
+    z-index: 2;
+    left: 115px;
+    top: 80px;
+}
+.popup{
+    position: absolute;
+    z-index: 3;
+    left: 250px;
+    top: 25px;
+}
+
+.hero h1{
+    color: #FFFFFF;
+    font-size: 3.75rem;
+    font-weight: 800;
+}
+.hero p{
+    color: #FFFFFF;
+    font-size: 1rem;
+}
+
+.btn{
+    display: flex;
+    gap: .5rem;
+}
+.btn1{
+    all: unset; 
+    display: flex;
+    align-items: center;
+    gap: .25rem;
+    background: linear-gradient(to top right, #F7E93F, #FB09B4, #9100F8);
+    color: #FFFFFF;
+    padding: 1rem 0.75rem;
+    border-radius: 10000px;
+    font-weight: 600;
+}
+.btn2{
+    all: unset; 
+    display: flex;
+    align-items: center;
+    gap: .25rem;
+    background: transparent;
+    color: #00FF88;
+    border: 1px solid #00FF88;
     padding: 1rem 0.75rem;
     border-radius: 10000px;
     font-weight: 600;
@@ -286,19 +368,35 @@ nav button{
 }
 
 @media screen and (max-width: 576px) {
+  
     nav{
-        display: none;
-    }
-    .mobile-nav{
-        display: flex;
-        justify-content: space-between;
         padding: 1.25rem;
-        border-bottom: 1px solid rgba(65, 37, 103, 1);
-        background-color: #1A0B2E;
     }
-    .mobile-nav img{
+    nav img{
         max-width: 8.5rem;
     }
+    .menu-bar{
+    display:none;
+    position:absolute;
+    top:100%;
+    right:24px;
+    flex-direction:column;
+    gap:16px;
+    padding:16px;
+    border-radius:12px;
+    background:rgba(0,0,0,0.75);
+    backdrop-filter: blur(12px);
+    min-width: 200px;
+  }
+    .subscribe{
+        display: none;
+    }
+    .hamburger-btn{
+        display:block;
+    }
+     .menu-bar.open{
+    display:flex;
+  }
         /* about us */
     .about-us{
         padding: 2.5rem 1.25rem;
@@ -423,6 +521,8 @@ nav button{
 .three-container{
     display: grid;
     gap: 2.5rem;
+    justify-content: center;
+    text-align: center;
 }
 .three h2{
     color: #FFFFFF;
