--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+/* universal reset */
 *{
     margin: 0;
     padding: 0;
     font-family: "Inter";
 }
+/* navbar */
 nav{
     background-color: #1A0B2E;
     display: flex;
@@ -11,13 +13,6 @@ nav{
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid rgba(65, 37, 103, 1);
-     position:relative;
-}
-.hamburger-btn{
-  display:none;
-   border:0;
-  cursor:pointer;
-  padding:6px;
 }
 /* menu */
 .menu-bar{
@@ -31,6 +26,7 @@ nav{
     text-decoration: none;
     color: #FFFFFF;
 }
+/* nav btn */
 nav button{
     all: unset; 
     display: flex;
@@ -41,6 +37,11 @@ nav button{
     padding: 1rem 0.75rem;
     border-radius: 10000px;
     font-weight: 600;
+}
+/* hamburger icon for mobile */
+.hamburger-btn{
+    display:none;
+    cursor:pointer;
 }
 
 /* hero */
@@ -367,8 +368,9 @@ nav button{
     opacity: .6;
 }
 
+/* small deice */
 @media screen and (max-width: 576px) {
-  
+    /* nav bar */
     nav{
         padding: 1.25rem;
     }
@@ -377,27 +379,14 @@ nav button{
     }
     .menu-bar{
     display:none;
-    position:absolute;
-    top:100%;
-    right:24px;
-    flex-direction:column;
-    gap:16px;
-    padding:16px;
-    border-radius:12px;
-    background:rgba(0,0,0,0.75);
-    backdrop-filter: blur(12px);
-    min-width: 200px;
-  }
+    }
     .subscribe{
         display: none;
     }
     .hamburger-btn{
         display:block;
     }
-     .menu-bar.open{
-    display:flex;
-  }
-        /* about us */
+    /* about us */
     .about-us{
         padding: 2.5rem 1.25rem;
         text-align: center;
