--- a/style.css
+++ b/style.css
@@ -50,40 +50,38 @@ nav button{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    /* padding: 6.125rem 32.8125rem; */
-    /* display: grid;
-    justify-items: center;
-    align-content: center;
-    text-align: center; */
+    padding: 6.3125rem 0;
 }
 .hero-block{
     display: grid;
     justify-items: center;
-    gap: 1rem;
+    gap: 1.5rem;
 }
+/* hero banner image container */
 .hero-visual{
     position: relative;
     margin: 0 auto;
     width: 21.875rem;
-    
 }
+/* visual effect */
 .back{
     position: relative;
     z-index: 1;
 }
+/* microphone */
 .front{
     position: absolute;
     z-index: 2;
     left: 115px;
     top: 80px;
 }
+/* new pop up */
 .popup{
     position: absolute;
     z-index: 3;
     left: 250px;
     top: 25px;
 }
-
 .hero h1{
     color: #FFFFFF;
     font-size: 3.75rem;
@@ -93,7 +91,7 @@ nav button{
     color: #FFFFFF;
     font-size: 1rem;
 }
-
+/* hero buttons */
 .btn{
     display: flex;
     gap: .5rem;
