--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ nav button{
     display:none;
     cursor:pointer;
 }
-
 /* hero */
 .hero{
     background-image: url(./assets/hero-bg.png);
@@ -385,81 +384,79 @@ nav button{
         display:block;
     }
     /* hero */
-.hero{
-    max-width: 576px;
-    background-size: 100vw;
-    background-position: center;
-    /* padding: 6.125rem 32.8125rem; */
-    /* display: grid;
-    justify-items: center;
-    align-content: center;
-    text-align: center; */
-}
-.hero-block{
-    display: grid;
-    justify-items: center;
-    gap: 1rem;
-}
-.hero-visual{
-    position: relative;
-    margin: 0 auto;
-    width: 21.875rem;
-    
-}
-.back{
-    position: relative;
-    z-index: 1;
-}
-.front{
-    position: absolute;
-    z-index: 2;
-    left: 115px;
-    top: 80px;
-}
-.popup{
-    position: absolute;
-    z-index: 3;
-    left: 250px;
-    top: 25px;
-}
+    .hero{
+        background-image: url(./assets/hero-bg.png);
+        background-color: #1A0B2E;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: top;
+        padding: 6.3125rem 0;
+    }
+    .hero-block{
+        display: grid;
+        justify-items: center;
+        gap: 1rem;
+    }
+    .hero-visual{
+        position: relative;
+        margin: 0 auto;
+        width: 21.875rem;
+        
+    }
+    .back{
+        position: relative;
+        z-index: 1;
+    }
+    .front{
+        position: absolute;
+        z-index: 2;
+        left: 115px;
+        top: 80px;
+    }
+    .popup{
+        position: absolute;
+        z-index: 3;
+        left: 250px;
+        top: 25px;
+    }
 
-.hero h1{
-    color: #FFFFFF;
-    font-size: 3.75rem;
-    font-weight: 800;
-}
-.hero p{
-    color: #FFFFFF;
-    font-size: 1rem;
-}
+    .hero h1{
+        color: #FFFFFF;
+        font-size: 3.75rem;
+        font-weight: 800;
+    }
+    .hero p{
+        color: #FFFFFF;
+        font-size: 1rem;
+    }
 
-.btn{
-    display: flex;
-    gap: .5rem;
-}
-.btn1{
-    all: unset; 
-    display: flex;
-    align-items: center;
-    gap: .25rem;
-    background: linear-gradient(to top right, #F7E93F, #FB09B4, #9100F8);
-    color: #FFFFFF;
-    padding: 1rem 0.75rem;
-    border-radius: 10000px;
-    font-weight: 600;
-}
-.btn2{
-    all: unset; 
-    display: flex;
-    align-items: center;
-    gap: .25rem;
-    background: transparent;
-    color: #00FF88;
-    border: 1px solid #00FF88;
-    padding: 1rem 0.75rem;
-    border-radius: 10000px;
-    font-weight: 600;
-}
+    .btn{
+        display: flex;
+        gap: .5rem;
+    }
+    .btn1{
+        all: unset; 
+        display: flex;
+        align-items: center;
+        gap: .25rem;
+        background: linear-gradient(to top right, #F7E93F, #FB09B4, #9100F8);
+        color: #FFFFFF;
+        padding: 1rem 0.75rem;
+        border-radius: 10000px;
+        font-weight: 600;
+    }
+    .btn2{
+        all: unset; 
+        display: flex;
+        align-items: center;
+        gap: .25rem;
+        background: transparent;
+        color: #00FF88;
+        border: 1px solid #00FF88;
+        padding: 1rem 0.75rem;
+        border-radius: 10000px;
+        font-weight: 600;
+    }
     /* about us */
     .about-us{
         padding: 2.5rem 1.25rem;
