--- a/style.css
+++ b/style.css
@@ -389,8 +389,8 @@ nav button{
         background-color: #1A0B2E;
         background-repeat: no-repeat;
         background-size: contain;
-        background-position: top;
-        padding: 6.3125rem 0;
+        background-position: center 4rem;
+        padding: 2.5rem 1.5rem;
     }
     .hero-block{
         display: grid;
@@ -400,8 +400,12 @@ nav button{
     .hero-visual{
         position: relative;
         margin: 0 auto;
-        width: 21.875rem;
+        width: 50%;
         
+    }
+    .hero-visual img{
+        max-width: 100%;
+        height: auto;
     }
     .back{
         position: relative;
@@ -410,24 +414,27 @@ nav button{
     .front{
         position: absolute;
         z-index: 2;
-        left: 115px;
-        top: 80px;
+        left: 30%;
+        top: 20%;
+        width: 40%;
     }
     .popup{
         position: absolute;
         z-index: 3;
-        left: 250px;
-        top: 25px;
+        left: 65%;
+        top: 5%;
+        width: 45%;
     }
 
     .hero h1{
         color: #FFFFFF;
-        font-size: 3.75rem;
+        font-size: 2.5rem;
         font-weight: 800;
     }
     .hero p{
         color: #FFFFFF;
         font-size: 1rem;
+        text-align: center;
     }
 
     .btn{
