--- a/style.css
+++ b/style.css
@@ -89,6 +89,8 @@ nav button{
 .hero p{
     color: #FFFFFF;
     font-size: 1rem;
+    opacity: .8;
+    text-align: center;
 }
 /* hero buttons */
 .btn{
@@ -387,82 +389,28 @@ nav button{
     .hero{
         background-image: url(./assets/hero-bg.png);
         background-color: #1A0B2E;
-        background-repeat: no-repeat;
         background-size: contain;
         background-position: center 4rem;
         padding: 2.5rem 1.5rem;
     }
-    .hero-block{
-        display: grid;
-        justify-items: center;
-        gap: 1rem;
-    }
     .hero-visual{
-        position: relative;
-        margin: 0 auto;
         width: 50%;
-        
     }
     .hero-visual img{
         max-width: 100%;
-        height: auto;
-    }
-    .back{
-        position: relative;
-        z-index: 1;
     }
     .front{
-        position: absolute;
-        z-index: 2;
         left: 30%;
         top: 20%;
         width: 40%;
     }
     .popup{
-        position: absolute;
-        z-index: 3;
         left: 65%;
         top: 5%;
         width: 45%;
     }
-
     .hero h1{
-        color: #FFFFFF;
         font-size: 2.5rem;
-        font-weight: 800;
-    }
-    .hero p{
-        color: #FFFFFF;
-        font-size: 1rem;
-        text-align: center;
-    }
-
-    .btn{
-        display: flex;
-        gap: .5rem;
-    }
-    .btn1{
-        all: unset; 
-        display: flex;
-        align-items: center;
-        gap: .25rem;
-        background: linear-gradient(to top right, #F7E93F, #FB09B4, #9100F8);
-        color: #FFFFFF;
-        padding: 1rem 0.75rem;
-        border-radius: 10000px;
-        font-weight: 600;
-    }
-    .btn2{
-        all: unset; 
-        display: flex;
-        align-items: center;
-        gap: .25rem;
-        background: transparent;
-        color: #00FF88;
-        border: 1px solid #00FF88;
-        padding: 1rem 0.75rem;
-        border-radius: 10000px;
-        font-weight: 600;
     }
     /* about us */
     .about-us{
