--- a/style.css
+++ b/style.css
@@ -322,10 +322,19 @@ nav button{
     background-image: url(./assets/footer-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: top;
     color: #FFFFFF;
     padding: 7.5rem;
+    display: grid;
+    gap: 2rem;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
 }
-
+.footer p{
+    font-size: 1rem;
+    opacity: .6;
+}
 .social-footer{
     display: flex;
     gap: 2.5rem;
@@ -339,18 +348,7 @@ nav button{
     font-weight: 500;
     opacity: .6;
 }
-.footer{
-    display: grid;
-    gap: 2rem;
-    align-items: center;
-    justify-items: center;
-    text-align: center;
 
-}
-.footer p{
-    font-size: 1rem;
-    opacity: .6;
-}
 
 /* small deice */
 @media screen and (max-width: 576px) {
