--- a/style.css
+++ b/style.css
@@ -345,7 +345,6 @@ nav button{
 }
 .social-footer-card p{
     font-size: 1rem;
-    font-weight: 500;
     opacity: .6;
 }
 
@@ -370,7 +369,6 @@ nav button{
     }
     /* hero */
     .hero{
-        background-image: url(./assets/hero-bg.png);
         background-color: #1A0B2E;
         background-size: contain;
         background-position: center 4rem;
@@ -441,6 +439,7 @@ nav button{
     .v-cards{
         display: grid;
         gap: 1rem;
+        margin: 0 auto;
     }
     /* host */
     .host-section{
@@ -459,44 +458,19 @@ nav button{
     }
     /* footer */
     .footer{
-        background-image: url(./assets/footer-bg.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        color: #FFFFFF;
+        background-color: #210f3e;
+        background-size: contain;
+        background-position: center 3.25rem;
         padding: 2.5rem 1.25rem;
     }
-
+    .footer img{
+        max-width: 13.6875rem;
+    }
     .social-footer{
-        padding: 1.5rem 4.5rem;
+        padding: 0 3.5rem;
         display: flex;
         gap: 1rem;
         flex-wrap: wrap;
         justify-content: center;
     }
-    .social-footer-card{
-        display: flex;
-        gap: .5rem;
-    }
-    .social-footer-card p{
-        font-size: 1rem;
-        font-weight: 500;
-        opacity: .6;
-    }
-    /* footer */
-.footer{
-    display: grid;
-    gap: 2rem;
-    align-items: center;
-    justify-items: center;
-    text-align: center;
-
-}
-.footer p{
-    font-size: 1rem;
-    opacity: .6;
-}
-.footer img{
-    max-width: 13.6875rem;
-}
 }
